src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhP0.5-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\ndefault window height: P0.5\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1 × 336, bounds: 1239 × 688, states: [Activated]
