src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhP0.5-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\ndefault window height: P0.5\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 336, bounds: 1239 × 688, states: []

post-map configures:
size: 1 × 336, bounds: 1239 × 688, states: [Activated]
